Optimize images, fix header z-index

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -84,6 +84,8 @@ a
     height: auto
     flex-shrink: 0
     position: relative
+    z-index: 10
+
   
 
 $burger-width: 2.8rem
